--- a/form.html
+++ b/form.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="background.css">
         <title>forms</title>
     </head>
     <body>
@@ -11,11 +11,11 @@
             <label>Frist Name:</label>
             <input type="text">
             <label>Last Name:</label>
-            <input type="text"><br><br>
+            <input type="text"><br><br><br>
             <label>Date of birth:</label>
             <input type="date">
             <label>Age:</label>
-            <input type="number"><br><br>
+            <input type="number"><br><br><br>
             <label>Gender:</label>
             <select>
                 <option>male</option>
@@ -24,25 +24,25 @@
             </select>
             
             <label>Email Address:</label>
-            <input type="email" value="Enter email address"><br><br>
+            <input type="email" value="Enter email address"><br><br><br>
             <label>Positions Available:</label>
             <input type="radio">
             <label>Junior Developer</label>
             <input type="radio">
             <label>Mid-level Developer</label>
             <input type="radio">
-            <label>Senior Developer</label><br><br>
+            <label>Senior Developer</label><br><br><br>
             <label>Programming Languages:</label>
             <input type="checkbox">
             <lable>Java</lable>
             <input type="checkbox">
             <label>Javascript</label>
             <input type="checkbox">
-            <label>Python</label><br><br>
+            <label>Python</label><br><br><br>
             <label>Password:</label>
             <input type="password">
             <label>Confirm Password:</label>
-            <input type="password"><br><br>
+            <input type="password"><br><br><br>
             <input type="button" value="submit">
             <input type="button" value="Reset">
             
